force-app/main/default/objects/Role__c/Role__c.object-meta.xml
<CustomObject>
    <label>Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>