force-app/main/default/objects/Role__c/fields/Additional_Traits__c.field-meta.xml
<CustomField>
    <fullName>Additional_Traits__c</fullName>
    <label>Additional Traits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hostile</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>