force-app/main/default/objects/Role__c/fields/Parent_Role__c.field-meta.xml
<CustomField>
    <fullName>Parent_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>