force-app/main/default/objects/Role__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>