force-app/main/default/objects/Role__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>