force-app/main/default/objects/Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Opposing Party</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Adjuster</fullName>
            </value>
            <value>
                <fullName>Expert Witness</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Medical Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>