force-app/main/default/objects/Role__c/fields/Role_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Role_Sub_Category__c</fullName>
    <label>Role Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Attorney</fullName>
            </value>
            <value>
                <fullName>Co-Counsel</fullName>
            </value>
            <value>
                <fullName>Treating Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>